# gtk

./: AUTHORS  flake.nix  meson.build  meson.options
docs/reference/gdk/: meson.build
gdk/: gdk.c  gdkdisplaymanager.c  meson.build
gdk/drm/: gdkdisplay-drm.c  gdkdisplay-drm.h  gdkdrm.h  gdkdrmdisplay.h  gdkdrmglcontext.h  gdkdrmmonitor.h  gdkdrmpopup.h  gdkdrmseat.h  gdkdrmsurface.h  gdkdrmtoplevel.h  gdkglcontext-drm.c  gdkglcontext-drm.h  gdkmonitor-drm.c  gdkmonitor-drm.h  gdkpopup-drm.c  gdkprivate-drm.h  gdkseat-drm.c  gdkseat-drm.h  gdksurface-drm-private.h  gdksurface-drm.c  gdktoplevel-drm.c  meson.build
gtk/: meson.build
